# VAScanSTM

./: .cproject  .mxproject  .project  CMakeLists.txt  STM32F7xx.cmake  VAScanSTM.gpdsc  VAScanSTM.ioc  mx.scratch
Inc/: i2c.h  lwipopts.h  main.h  stm32f7xx_hal_conf.h
Inc/Backup/: spi.h.bak
Src/: eth_HalInit.tmp  eth_Msp.tmp  ethernetif.c  main.c
Src/Backup/: gpio.c.bak  i2c.c.bak  lwip.c.bak  main.c.bak  spi.c.bak
